ml/k3d-rancher-kubeflow-mlflow/k8s/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app: traefik
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: dashboard
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
